--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,9 +33,18 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/sopaDeLetras
 excludes=
+file.reference.gs-algo-2.0.jar=C:\\Users\\luiss\\Downloads\\gs-algo-2.0.jar
+file.reference.gs-core-2.0.jar=C:\\Users\\luiss\\Downloads\\gs-core-2.0.jar
+file.reference.gs-ui-javafx-2.0.jar=C:\\Users\\luiss\\Downloads\\gs-ui-javafx-2.0.jar
+file.reference.gs-ui-swing-2.0.jar=C:\\Users\\luiss\\Downloads\\gs-ui-swing-2.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.gs-core-2.0.jar}:\
+    ${file.reference.gs-ui-swing-2.0.jar}:\
+    ${file.reference.gs-ui-javafx-2.0.jar}:\
+    ${file.reference.gs-algo-2.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
